# NoiseG8

./: .gitignore  Cargo.toml  README.md  bundler.toml
.assets/_xd/: NoiseG8-Banner.xd  NoiseG8-wallpaper.xd  NoiseG8.xd
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: ---bug-report.md  ---feature-request.md
crates/baseview/: Cargo.toml
crates/baseview/src/win/: window.rs
crates/egui-baseview/: Cargo.toml
crates/egui-baseview/src/: translate.rs  window.rs
crates/egui-baseview/src/renderer/: mod.rs
crates/egui_baseview/: Cargo.toml  LICENSE
crates/egui_baseview/src/: lib.rs  window.rs
crates/egui_baseview/src/renderer/: opengl_renderer.rs
crates/nih_plug_egui/: Cargo.toml
crates/nih_plug_egui/src/widgets/: param_slider.rs
src/: app.json  index.html  lib.rs  main.js  msbuild.binlog  package-lock.json  package.json
src/android/: settings.gradle
src/android/app/: _BUCK  build.gradle
src/android/app/src/debug/java/com/noiseg8/: ReactNativeFlipper.java
src/android/app/src/main/: AndroidManifest.xml
src/android/app/src/main/java/com/noiseg8/: MainActivity.java  MainApplication.java
src/android/app/src/main/res/values/: strings.xml
src/ios/: Podfile
src/ios/NoiseG8/: AppDelegate.m  Info.plist  LaunchScreen.storyboard
src/ios/NoiseG8.xcodeproj/: project.pbxproj
src/ios/NoiseG8.xcodeproj/xcshareddata/xcschemes/: NoiseG8.xcscheme
src/ios/NoiseG8Tests/: NoiseG8Tests.m
src/noiseg8/: README.md  package-lock.json  pubspec.yaml
src/noiseg8/lib/: main.dart  window_buttons_sized_box.dart
src/noiseg8/lib/window/: top_menu_item.dart  top_menu_item_buttons.dart  window_buttons_sized_box.dart
src/noiseg8/linux/: CMakeLists.txt  my_application.cc
src/noiseg8/macos/Flutter/: GeneratedPluginRegistrant.swift
src/noiseg8/macos/Runner.xcodeproj/: project.pbxproj
src/noiseg8/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
src/noiseg8/macos/Runner/Configs/: AppInfo.xcconfig
src/noiseg8/test/: widget_test.dart
src/noiseg8/web/: index.html  manifest.json
src/noiseg8/windows/: CMakeLists.txt
src/noiseg8/windows/runner/: Runner.rc  main.cpp
src/windows/: noiseg8.sln
src/windows/noiseg8/: App.cpp  App.h  App.idl  App.xaml  MainPage.cpp  MainPage.h  MainPage.idl  MainPage.xaml  Package.appxmanifest  ReactPackageProvider.cpp  ReactPackageProvider.h  noiseg8.vcxproj
