[package]
name = "noiseg8"
version = "0.0.0"
edition = "2021"
authors = ["ZMANN <info@zmann.org>"]
license = "GPL-3.0-or-later"
homepage = "zmann.org"
description = "TODO"

[workspace]
members = [
    "xtask",
    "crates/baseview",
    "crates/nih_plug_egui",
    "crates/egui_baseview",
]

[lib]
crate-type = ["cdylib"]

[dependencies]
nih_plug = { workspace = true }
nih_plug_egui = { path = "crates/nih_plug_egui" }

[workspace.dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git" }
raw-window-handle = "0.5"
baseview = { path = "crates/baseview" }

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
