[package]
name = "egui_baseview"
version = "0.1.0"
authors = ["Billy Messenger <BillyDM@protonmail.com>"]
edition = "2021"
description = "A baseview backend for egui"
license = "MIT"
repository = "https://github.com/BillyDM/egui-baseview"
documentation = "https://docs.rs/egui-baseview"
keywords = ["gui", "ui", "graphics", "interface", "widgets"]
categories = ["gui"]
readme = "README.md"

[features]
default = ["opengl"]
opengl = ["egui_glow", "baseview/opengl"]

[dependencies]
egui = { workspace = true }
egui_glow = { version = "0.22", optional = true }
keyboard-types = { version = "0.6.1", default-features = false }
baseview = { workspace = true }
raw-window-handle = { workspace = true }
copypasta = "0.8"
