[package]
name = "egui_baseview"
version = "0.2.0"
authors = ["Billy Messenger <BillyDM@tutamail.com>"]
edition = "2021"
description = "A baseview backend for egui"
license = "MIT"
repository = "https://github.com/BillyDM/egui-baseview"
documentation = "https://docs.rs/egui-baseview"
keywords = ["gui", "ui", "graphics", "interface", "widgets"]
categories = ["gui"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["opengl", "default_fonts"]
opengl = ["egui_glow", "baseview/opengl"]
default_fonts = ["egui/default_fonts"]
## Enable parallel tessellation using [`rayon`](https://docs.rs/rayon).
##
## This can help performance for graphics-intense applications.
rayon = ["egui/rayon"]

[dependencies]
raw-window-handle = { workspace = true }
egui = { version = "0.26", default-features = false, features = ["bytemuck"] }
egui_glow = { version = "0.26", optional = true }
keyboard-types = { version = "0.6", default-features = false }
baseview = { workspace = true }
# TODO: Enable wayland feature when baseview gets wayland support.
copypasta = { version = "0.10", default-features = false, features = ["x11"] }
log = "0.4"
