[package]
name = "nih_plug_egui"
version = "0.0.0"
edition = "2021"
authors = ["Robbert van der Helm <mail@robbertvanderhelm.nl>"]
license = "ISC"

description = "An adapter to use egui GUIs with NIH-plug"

[features]
default = ["opengl", "default_fonts"]
# `nih_plug_egui` always uses OpenGL since egui's wgpu backend is still unstable
# depending on the platform
opengl = ["egui_baseview/opengl"]
default_fonts = ["egui_baseview/default_fonts"]
rayon = ["egui_baseview/rayon"]

[dependencies]
nih_plug = { workspace = true }
raw-window-handle = { workspace = true }
baseview = { workspace = true }
crossbeam = "0.8"
egui_baseview = { path = "../egui_baseview", default-features = false }
lazy_static = "1.4"
parking_lot = "0.12"
# To make the state persistable
serde = { version = "1.0", features = ["derive"] }
